--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -16,6 +16,9 @@
   {{ $style := resources.Get "css/style.css" | minify }}
   <link rel="stylesheet" href="{{ $style.Permalink }}" media="screen">
 
+  {{ $style2 := resources.Get "css/style2.css" | minify }}
+  <link rel="stylesheet" href="{{ $style2.Permalink }}" media="screen">
+
   {{ "<!--Favicon-->" | safeHTML }}
   <link rel="shortcut icon" href="{{ `images/favicon.png` | absURL }}" type="image/x-icon">
   <link rel="icon" href="{{ `images/favicon.png` | absURL }}" type="image/x-icon">
