--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -28,7 +28,7 @@ body {
     font-family: "Work Sans", sans-serif;
 }
 
-input, textarea, button, .button, .faux-button, .faux-button.more-link, .wp-block-button__link, .wp-block-file__button, .entry-content li {
+input, textarea, button, .button, .faux-button, .faux-button.more-link, .wp-block-button__link, .wp-block-file__button, .entry-content li, .widget_text {
     font-weight: 300;
     font-family: "Work Sans", sans-serif;
 }
