--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -50,6 +50,14 @@ hr {
     background: #b4c3ca;
 }
 
+.menu-modal {
+    opacity: 0.7;
+}
+
+.menu-modal.active .menu-modal-inner {
+    opacity: 0.7;
+}
+
 
 #site-header,
 .entry-header,
