--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Work+Sans:wght@300;700&display=swap');
 
 a {
     color: black; }
