--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,7 +17,8 @@
       <div class="header-titles">
         <div class="site-title faux-heading"><a href="{{ .Site.BaseURL }}"><img
                 src="images/logo.svg"
-                alt="fabschools logo"/></a></div>
+                alt="fabschools logo"
+                height="100%"/></a></div>
       </div><!-- .header-titles -->
 
       <button class="toggle nav-toggle mobile-nav-toggle" data-toggle-target=".menu-modal"
