--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,10 +15,7 @@
         </span>
       </button><!-- .search-toggle -->
       <div class="header-titles">
-        <div class="site-title faux-heading"><a href="{{ .Site.BaseURL }}"><img
-                src="images/logo.svg"
-                alt="fabschools logo"
-                height="100%"/></a></div>
+        <div class="site-title faux-heading"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></div>
       </div><!-- .header-titles -->
 
       <button class="toggle nav-toggle mobile-nav-toggle" data-toggle-target=".menu-modal"
