logo num itio estupido

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -32,6 +32,10 @@
       </button><!-- .nav-toggle -->
 
     </div><!-- .header-titles-wrapper -->
+    <img
+            src="images/logo.svg"
+            alt="fabschools logo"
+           />
 
     <div class="header-navigation-wrapper">
       <nav class="primary-menu-wrapper" aria-label="Horizontal" role="navigation">
