--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -38,6 +38,11 @@ hr {
     color: black;
 }
 
+.logozito {
+    float: left;
+    height: calc(23px + 0.7vw);
+    margin-right: 0;
+}
 
 
 #site-header,
