--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -35,6 +35,7 @@
     <img
             src="images/logo.svg"
             alt="fabschools logo"
+            class="logozito"
            />
 
     <div class="header-navigation-wrapper">
