--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -45,6 +45,12 @@ hr {
     margin-left: 0.7vw;
 }
 
+.sectionFooterDecor{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width:90%;
+}
 
 #site-header,
 .entry-header,
