--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -50,6 +50,7 @@
         Up <span class="arrow" aria-hidden="true">&uarr;</span> </span><!-- .to-the-top-short -->
     </a><!-- .to-the-top -->
   </div><!-- .section-inner -->
+  <img class="sectionFooterDecor" src="images/footer.png" />
 </footer>
 
 
