--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -39,7 +39,7 @@ hr {
 }
 
 .logozito {
-    
+    padding: 0 0 0 70vw;
     height: calc(23px + 0.7vw);
     margin-right: 0;
     margin-left: 0.7vw;
