--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -40,17 +40,17 @@
 
 <footer id="site-footer" role="contentinfo" class="header-footer-group">
   <div class="section-inner">
-    <div class="footer-credits">
-      <p class="footer-copyright">{{ .Site.Params.footer.copyright | markdownify }}</p><!-- .powered-by-wordpress -->
-    </div><!-- .footer-credits -->
+    <img class="sectionFooterDecor" src="images/footer.png" />
+    <!--<div class="footer-credits">
+      <p class="footer-copyright">{{ .Site.Params.footer.copyright | markdownify }}</p>&lt;!&ndash; .powered-by-wordpress &ndash;&gt;
+    </div>&lt;!&ndash; .footer-credits &ndash;&gt;
     <a class="to-the-top" href="#site-header">
       <span class="to-the-top-long">
-        To the top <span class="arrow" aria-hidden="true">&uarr;</span> </span><!-- .to-the-top-long -->
+        To the top <span class="arrow" aria-hidden="true">&uarr;</span> </span>&lt;!&ndash; .to-the-top-long &ndash;&gt;
       <span class="to-the-top-short">
-        Up <span class="arrow" aria-hidden="true">&uarr;</span> </span><!-- .to-the-top-short -->
-    </a><!-- .to-the-top -->
+        Up <span class="arrow" aria-hidden="true">&uarr;</span> </span>&lt;!&ndash; .to-the-top-short &ndash;&gt;
+    </a>&lt;!&ndash; .to-the-top &ndash;&gt;-->
   </div><!-- .section-inner -->
-  <img class="sectionFooterDecor" src="images/footer.png" />
 </footer>
 
 
