--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -39,17 +39,16 @@ hr {
 }
 
 .logozito {
-    padding: 0 0 0 70vw;
+    float: left;
     height: calc(23px + 0.7vw);
     margin-right: 0;
-    margin-left: 0.7vw;
 }
 
 .sectionFooterDecor{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width:90%;
+    width:80%;
 }
 
 #site-header,
