root path to images

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -40,7 +40,7 @@
 
 <footer id="site-footer" role="contentinfo" class="header-footer-group">
   <div class="section-inner">
-    <img class="sectionFooterDecor" src="images/footer.png" />
+    <img class="sectionFooterDecor" src="/images/footer.png" />
     <!--<div class="footer-credits">
       <p class="footer-copyright">{{ .Site.Params.footer.copyright | markdownify }}</p>&lt;!&ndash; .powered-by-wordpress &ndash;&gt;
     </div>&lt;!&ndash; .footer-credits &ndash;&gt;
