--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,7 +16,7 @@
       </button><!-- .search-toggle -->
       <div class="header-titles">
         <img
-                src="images/logo.svg"
+                src="/images/logo.svg"
                 alt="fabschools logo"
                 class="logozito"
         />
