home link on logo

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,11 +15,11 @@
         </span>
       </button><!-- .search-toggle -->
       <div class="header-titles">
-        <img
+        <a href="{{ .Site.BaseURL }}"><img
                 src="/images/logo.svg"
                 alt="fabschools logo"
                 class="logozito"
-        />
+        /></a>
         <!--<div class="site-title faux-heading"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></div>-->
       </div><!-- .header-titles -->
 
