--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,20 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Work+Sans:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Caption:wght@400;700&display=swap');
 
 a {
     color: black; }
 
 p{
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 300;
+    font-family: 'PT Sans Caption', sans-serif;
+    font-weight: 400;
     font-size: 2rem;
 }
 
 h1,h2,h3,
 .entry-content h1, .entry-content h2, .entry-content h3, .entry-content h4, .entry-content h5, .entry-content h6,
 .entry-content cite, .entry-content figcaption, .entry-content table, .entry-content address, .entry-content .wp-caption-text, .entry-content .wp-block-file {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'PT Sans Caption', sans-serif;
     text-transform: uppercase;
-    font-weight: 600;
+    font-weight: 700;
     font-style: normal;
 }
 
@@ -30,8 +30,8 @@ body {
 
 input, textarea, button, .button, .faux-button, .faux-button.more-link, .wp-block-button__link, .wp-block-file__button, .entry-content li,
 .widget_text p, .widget_text ol, .widget_text ul, .widget_text dl, .widget_text dt, .widget-content .rssSummary {
-    font-weight: 300;
-    font-family: "Work Sans", sans-serif;
+    font-weight: 400;
+    font-family: 'PT Sans Caption', sans-serif;
 }
 
 hr {
