--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans+Caption:wght@400;700&display=swap');
 
 a {
-    color: rgb(57, 90, 255); }
+    color: #2f2995; }
 
 p{
     font-family: 'PT Sans Caption', sans-serif;
     font-weight: 400;
     font-size: 2rem;
+    color: #2f2995;
 }
 
 h1,h2,h3,
@@ -16,6 +17,8 @@ h1,h2,h3,
     text-transform: uppercase;
     font-weight: 700;
     font-style: normal;
+    letter-spacing: 0.7em;
+    color: #2f2995;
 }
 
 body {
@@ -35,7 +38,7 @@ input, textarea, button, .button, .faux-button, .faux-button.more-link, .wp-bloc
 }
 
 hr {
-    color: black;
+    color: #2f2995;
 }
 
 .logozito {
@@ -52,7 +55,7 @@ hr {
 }
 
 .color-accent{
-    color:black;
+    color: #2f2995;
 }
 
 #site-header,
@@ -63,7 +66,7 @@ hr {
 .archive-header,
 .singular .featured-media::before,
 .singular .entry-header {
-    color: black;
+    color: #2f2995;
     background-color: #b4c3ca;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='30' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%23bdccd4' stroke-width='10' %3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E");
 }
