--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -92,5 +92,9 @@ button, .button, .faux-button, .wp-block-button__link, .wp-block-file .wp-block-
 
 }
 
+.is-style-outline .wp-block-button__link:not(.has-text-color) {
+    color: #2F2795;
+  }
+
 
 
