--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,4 @@
+<div class="bg"></div>
 <header id="site-header" class="header-footer-group" role="banner">
   <div class="header-inner section-inner">
     <div class="header-titles-wrapper">
