--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1356,7 +1356,7 @@ ul.social-icons li {
 
 
 #site-header {
-	background: #fff;
+	/* background: #fff; */
 	position: relative;
 }
 
@@ -2406,7 +2406,7 @@ body:not(.singular) main>article:first-of-type {
 /* Post Header ------------------------------- */
 
 .singular .entry-header {
-	background-color: #fff;
+	/* background-color: #fff; */
 	padding: 4rem 0;
 }
 
