--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4363,7 +4363,7 @@ div.comment:first-of-type {
 
 .footer-nav-widgets-wrapper,
 #site-footer {
-	background-color: #fff;
+	/* background-color: #fff; */
 	border-color: #dedfdf;
 	border-style: solid;
 	border-width: 0;
