--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -12,7 +12,7 @@ p{
 
 bg{
     background-color: #fff0c6;
-    background-image: url("https://fabschools.pt/images/00_halftone.png");
+    /* background-image: url("https://fabschools.pt/images/00_halftone.png"); */
     background-repeat: repeat;
 }
 
